# aiida-oncvpsp

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: oncvpsp-sr-4.0.1.yaml
src/aiida_oncvpsp/: __init__.py  calcfunctions.py  calculations.py  parsers.py
