[project]
name = "aiida-oncvpsp"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Austin Zadoks", email = "austin.zadoks@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiida-core>=2.7.1",
    "aiida-pseudo>=1.8.0",
    "pyoncvpsp==0.1.0"
]

[tool.uv.sources]
pyoncvpsp = { git = "https://github.com/azadoks/pyoncvpsp" }

[tool.ruff]
line-length = 120

[project.scripts]
aiida-oncvpsp = "aiida_oncvpsp:main"

[project.entry-points.'aiida.calculations']
'oncvpsp.oncvpsp' = 'aiida_oncvpsp.calculations:OncvpspCalculation'

[project.entry-points.'aiida.parsers']
'oncvpsp.oncvpsp' = 'aiida_oncvpsp.parsers:OncvpspParser'

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyrefly>=0.55.0",
    "ruff>=0.14.8",
]
